--- a/config/locales/server.en.yml
+++ b/config/locales/server.en.yml
@@ -2569,6 +2569,8 @@ en:
       totp: "Use an authenticator app or security key instead"
       backup_code: "Use a backup code instead"
 
+  second_factor_auth:
+    sasas
   admin:
     email:
       sent_test: "sent!"
