--- a/config/locales/client.en.yml
+++ b/config/locales/client.en.yml
@@ -3639,6 +3639,7 @@ en:
 
     lightbox:
       download: "download"
+      open: "original image"
       previous: "Previous (Left arrow key)"
       next: "Next (Right arrow key)"
       counter: "%curr% of %total%"
